--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "first-app",
+  "name": "shop",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~9.1.7",
     "@angular/platform-browser-dynamic": "~9.1.7",
     "@angular/router": "~9.1.7",
+    "@ngrx/store": "^9.2.0",
     "bootstrap": "^3.4.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
